<resources>
    <string name="app_name">Unsplash</string>
    <string name="failure_to_connect">Failure to connect</string>
    <string name="menu">Menu</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="main_image">Main Image</string>
    <string name="twitter">Twitter</string>
    <string name="likes">Likes</string>
    <string name="instagram">Instagram</string>
    <string name="followers">Followers</string>
    <string name="follows">Follows</string>
</resources>