<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="controller"
            type="uz.dilmurodjonov_a.unsplash.ui.main.MainUIController" />

        <import type="android.view.View" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/relativeMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <RelativeLayout
                android:id="@+id/relativeToolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginBottom="24dp">

                <ImageView
                    android:id="@+id/imageMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/menu"
                    android:onClick="@{()->controller.onMenuClick()}"
                    android:padding="4dp"
                    android:src="@drawable/ic_menu"
                    app:tint="@color/light_black" />

                <TextView
                    style="@style/TitleTextView"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/imageNotification"
                    android:layout_toEndOf="@id/imageMenu"
                    android:text="@string/app_name" />

                <ImageView
                    android:id="@+id/imageNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/notification"
                    android:onClick="@{()->controller.onNotificationClick()}"
                    android:padding="4dp"
                    android:src="@drawable/ic_notifications"
                    app:tint="@color/light_black" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressLoad"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeToolbar"
                android:layout_marginTop="-12dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/light_black"
                tools:ignore="UnusedAttribute" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeToolbar"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_photo" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/cardUserInfo"
                android:layout_below="@id/recyclerPhotos"
                android:layout_margin="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageMain"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/light_black_5"
                        android:contentDescription="@string/main_image"
                        android:scaleType="centerCrop" />

                    <ImageView
                        loadImage="@{controller.imageUrl}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/main_image"
                        android:scaleType="centerCrop" />
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardUserInfo"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_above="@id/linearBottomBar"
                android:layout_marginStart="48dp"
                android:layout_marginTop="-80dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:foreground="?selectableItemBackground"
                    android:onClick="@{()->controller.onUserInfoClick()}"
                    android:padding="16dp"
                    tools:ignore="UnusedAttribute">

                    <TextView
                        android:id="@+id/textPhotoDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/layoutEnd"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@{controller.photoDescription}"
                        android:textColor="@color/light_black"
                        android:textSize="12dp"
                        tools:ignore="SpUsage"
                        tools:text="A man drinking a coffee." />

                    <LinearLayout
                        android:id="@+id/layoutEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:text="@{controller.likeCount}"
                            android:textColor="@color/light_black"
                            android:textSize="12dp"
                            tools:ignore="SpUsage"
                            tools:text="1.2K" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="@string/likes"
                            android:src="@drawable/ic_favorite"
                            app:tint="@color/light_black" />


                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/textPhotoDescription"
                        android:layout_marginTop="8dp"
                        android:background="@color/light_black_5" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageUserPhoto"
                        loadUserImage="@{controller.userImageUrl}"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/light_black_5"
                        android:scaleType="centerCrop"
                        app:shapeAppearanceOverlay="@style/circleImageView" />

                    <TextView
                        android:id="@+id/textName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/textUserName"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="4dp"
                        android:layout_toEndOf="@id/imageUserPhoto"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@{controller.name}"
                        android:textColor="@color/light_black"
                        android:textSize="14dp"
                        android:textStyle="bold"
                        tools:ignore="SpUsage"
                        tools:text="Gilbert Kane" />

                    <TextView
                        android:id="@+id/textUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_toStartOf="@id/imageInstagram"
                        android:layout_toEndOf="@id/imageUserPhoto"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@{controller.userName}"
                        android:textColor="@color/light_black"
                        android:textSize="12dp"
                        android:textStyle="italic"
                        tools:ignore="SpUsage"
                        tools:text="poorkane" />

                    <ImageView
                        android:id="@+id/imageInstagram"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:contentDescription="@string/instagram"
                        android:src="@drawable/instagram"
                        android:visibility="@{controller.hasInstagram?View.VISIBLE:View.INVISIBLE}"
                        app:tint="@color/light_black" />

                    <ImageView
                        android:id="@+id/imageTwitter"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@id/imageInstagram"
                        android:contentDescription="@string/twitter"
                        android:src="@drawable/twitter"
                        android:visibility="@{controller.hasTwitter?View.VISIBLE:View.INVISIBLE}"
                        app:tint="@color/light_black" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/linearBottomBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/search"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:onClick="@{()->controller.onSearchClick()}"
                    android:padding="12dp"
                    android:src="@drawable/ic_search"
                    app:tint="@color/light_black"
                    tools:ignore="UnusedAttribute" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/dashboard"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:onClick="@{()->controller.onDashboardClick()}"
                    android:padding="12dp"
                    android:src="@drawable/ic_dashboard"
                    app:tint="@color/light_black"
                    tools:ignore="UnusedAttribute" />


                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="2"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/light_black"
                        android:contentDescription="@string/favorite"
                        android:foreground="?selectableItemBackgroundBorderless"
                        android:onClick="@{()->controller.onHomeClick()}"
                        android:padding="12dp"
                        android:src="@drawable/ic_home"
                        app:tint="@color/white"
                        tools:ignore="UnusedAttribute" />
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/favorite"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:onClick="@{()->controller.onFavoriteClick()}"
                    android:padding="12dp"
                    android:src="@drawable/ic_favorite"
                    app:tint="@color/light_black"
                    tools:ignore="UnusedAttribute" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/profile"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:onClick="@{()->controller.onProfileClick()}"
                    android:padding="12dp"
                    android:src="@drawable/ic_person"
                    app:tint="@color/light_black"
                    tools:ignore="UnusedAttribute" />
            </LinearLayout>
        </RelativeLayout>

        <!--<ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_loading"
            android:indeterminateTint="@color/light_black"
            tools:ignore="UnusedAttribute" />-->
    </RelativeLayout>
</layout>